[gd_scene load_steps=16 format=4 uid="uid://bgbl4bbvnrl6d"]

[ext_resource type="Script" path="res://mods/tanks/src/scene_manager.gd" id="1_roabj"]
[ext_resource type="Script" path="res://mods/tanks/src/camera.gd" id="2_kugd1"]
[ext_resource type="Texture2D" uid="uid://de2nleovbubau" path="res://mods/tanks/assets/terrain_tiles.png" id="3_sh4h1"]
[ext_resource type="PackedScene" uid="uid://c1nswlny7h5ev" path="res://mods/tanks/tank.tscn" id="4_l0lc6"]
[ext_resource type="Script" path="res://mods/tanks/src/context_factory.gd" id="5_rqjlk"]
[ext_resource type="Script" path="res://mods/tanks/src/health_ui.gd" id="6_b4slm"]
[ext_resource type="Script" path="res://mods/tanks/src/ending_ui.gd" id="6_yisjv"]
[ext_resource type="Texture2D" uid="uid://ddsgymsgmga3t" path="res://mods/tanks/assets/StatusSuccess.png" id="7_tsfnj"]
[ext_resource type="Texture2D" uid="uid://n734k5dalr6v" path="res://mods/tanks/assets/Godot.png" id="8_0gx7c"]
[ext_resource type="Texture2D" uid="uid://ciey3mow7f8i" path="res://mods/tanks/assets/StatusError.png" id="8_t586r"]
[ext_resource type="Script" path="res://mods/tanks/src/enemy.gd" id="11_l66hq"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bw5ct"]
texture = ExtResource("3_sh4h1")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 32, 16, 32, 16, -32, -16, -32)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 16, 32, -16, -32, -16, -32, 16)
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -16, 32, 16, 16, 16, 16, 32, -16, 32, -16, -16)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -16, -32, 16, -16, 16, -16, 32, 16, 32, 16, -16)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 16, 32, -16, 16, -16, 16, -32, -16, -32, -16, 16)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 16, -32, -16, -16, -16, -16, -32, 16, -32, 16, 16)
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0

[sub_resource type="TileSet" id="TileSet_4wj2t"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_bw5ct")

[sub_resource type="CircleShape2D" id="CircleShape2D_pd3kx"]
radius = 145.055

[sub_resource type="NavigationPolygon" id="NavigationPolygon_puxup"]
vertices = PackedVector2Array(582, 582, 57.9766, 582, 57.0234, 57, 582, 57)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(47, 47, 592, 47, 592, 592, 48, 592)])

[node name="Scene" type="Node2D" node_paths=PackedStringArray("context_factory", "ending_ui")]
script = ExtResource("1_roabj")
context_factory = NodePath("ContextFactory")
ending_ui = NodePath("EndingUI")

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("tilemap")]
script = ExtResource("2_kugd1")
tilemap = NodePath("../TileMapLayer")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAADAAEAAAABAAAAAAACAAAAAAACAAAAAAACAAAAAAADAAAAAAACAAAAAAAEAAAAAAACAAAAAAAFAAAAAAACAAAAAAAGAAAAAAACAAAAAAAHAAAAAAACAAAAAAAIAAAAAAACAAAAAAAJAAAAAAAEAAEAAAAAAAEAAAABAAAAAAAAAAIAAAABAAAAAAAAAAMAAAABAAAAAAAAAAQAAAABAAAAAAAAAAUAAAABAAAAAAAAAAYAAAABAAAAAAAAAAcAAAABAAAAAAAAAAgAAAABAAAAAAAAAAkAAAAFAAEAAAABAAkAAAACAAAAAAACAAkAAAACAAAAAAADAAkAAAACAAAAAAAEAAkAAAACAAAAAAAFAAkAAAACAAAAAAAJAAEAAAABAAAAAAAJAAIAAAABAAAAAAAJAAMAAAABAAAAAAAJAAQAAAABAAAAAAAJAAUAAAABAAAAAAAJAAYAAAABAAAAAAAJAAcAAAABAAAAAAAJAAgAAAABAAAAAAAJAAkAAAAGAAEAAAAIAAkAAAACAAAAAAAHAAkAAAACAAAAAAAGAAkAAAACAAAAAAABAAEAAAAAAAAAAAACAAIAAAAAAAAAAAADAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAABAAgAAAAAAAAAAAABAAcAAAAAAAAAAAABAAYAAAAAAAAAAAABAAUAAAAAAAAAAAABAAQAAAAAAAAAAAABAAMAAAAAAAAAAAABAAIAAAAAAAAAAAACAAEAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAADAAQAAAAAAAAAAAADAAIAAAAAAAAAAAADAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAEAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAcAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_4wj2t")

[node name="ContextFactory" type="Node" parent="." node_paths=PackedStringArray("player_tank")]
script = ExtResource("5_rqjlk")
player_tank = NodePath("../Player")

[node name="HealthUI" type="CanvasLayer" parent="." node_paths=PackedStringArray("player_bar", "enemy_bar")]
script = ExtResource("6_b4slm")
player_bar = NodePath("PanelContainer/MarginContainer/HBoxContainer/PlayerHealthContainer/ProgressBar")
enemy_bar = NodePath("PanelContainer/MarginContainer/HBoxContainer/EnemyHealthContainer/ProgressBar")

[node name="PanelContainer" type="PanelContainer" parent="HealthUI"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="HealthUI/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="HealthUI/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PlayerHealthContainer" type="VBoxContainer" parent="HealthUI/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HealthUI/PanelContainer/MarginContainer/HBoxContainer/PlayerHealthContainer"]
layout_mode = 2
text = "Player"

[node name="ProgressBar" type="ProgressBar" parent="HealthUI/PanelContainer/MarginContainer/HBoxContainer/PlayerHealthContainer"]
layout_mode = 2
step = 1.0
value = 100.0

[node name="EnemyHealthContainer" type="VBoxContainer" parent="HealthUI/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HealthUI/PanelContainer/MarginContainer/HBoxContainer/EnemyHealthContainer"]
layout_mode = 2
text = "Enemy"

[node name="ProgressBar" type="ProgressBar" parent="HealthUI/PanelContainer/MarginContainer/HBoxContainer/EnemyHealthContainer"]
layout_mode = 2
step = 1.0
value = 100.0

[node name="EndingUI" type="CanvasLayer" parent="." node_paths=PackedStringArray("winner_box", "loser_box", "time_label")]
process_mode = 2
visible = false
script = ExtResource("6_yisjv")
winner_box = NodePath("PanelContainer/VBoxContainer/CenterContainer/WinnerBox")
loser_box = NodePath("PanelContainer/VBoxContainer/CenterContainer/LoserBox")
time_label = NodePath("PanelContainer/VBoxContainer/CenterContainer/WinnerBox/HBoxContainer2/TimeLabel")

[node name="PanelContainer" type="PanelContainer" parent="EndingUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="EndingUI/PanelContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="EndingUI/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="WinnerBox" type="VBoxContainer" parent="EndingUI/PanelContainer/VBoxContainer/CenterContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="EndingUI/PanelContainer/VBoxContainer/CenterContainer/WinnerBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="EndingUI/PanelContainer/VBoxContainer/CenterContainer/WinnerBox/HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_tsfnj")
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="EndingUI/PanelContainer/VBoxContainer/CenterContainer/WinnerBox/HBoxContainer"]
layout_mode = 2
text = "Good Work!"

[node name="HBoxContainer2" type="HBoxContainer" parent="EndingUI/PanelContainer/VBoxContainer/CenterContainer/WinnerBox"]
layout_mode = 2

[node name="Label" type="Label" parent="EndingUI/PanelContainer/VBoxContainer/CenterContainer/WinnerBox/HBoxContainer2"]
layout_mode = 2
text = "Your time was: "

[node name="TimeLabel" type="Label" parent="EndingUI/PanelContainer/VBoxContainer/CenterContainer/WinnerBox/HBoxContainer2"]
layout_mode = 2

[node name="LoserBox" type="VBoxContainer" parent="EndingUI/PanelContainer/VBoxContainer/CenterContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="EndingUI/PanelContainer/VBoxContainer/CenterContainer/LoserBox"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="EndingUI/PanelContainer/VBoxContainer/CenterContainer/LoserBox/HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_t586r")
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="EndingUI/PanelContainer/VBoxContainer/CenterContainer/LoserBox/HBoxContainer"]
layout_mode = 2
text = "You lose"

[node name="MarginContainer" type="MarginContainer" parent="EndingUI/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="EndingUI/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="EndingUI/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Made in "

[node name="TextureRect" type="TextureRect" parent="EndingUI/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_0gx7c")
expand_mode = 2
stretch_mode = 4

[node name="Label2" type="Label" parent="EndingUI/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = " Godot Engine"

[node name="Player" parent="." instance=ExtResource("4_l0lc6")]
position = Vector2(310, 331)
collision_mask = 7
tank_tint = Color(0.501961, 1, 0.592157, 1)
id = &"PLAYER"

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="Player"]
radius = 49.48

[node name="Enemy" parent="." node_paths=PackedStringArray("navigation") instance=ExtResource("4_l0lc6")]
position = Vector2(492, 108)
collision_layer = 4
script = ExtResource("11_l66hq")
navigation = NodePath("NavigationAgent2D")
tank_tint = Color(1, 0.5, 0.591667, 1)
id = &"ENEMY"
gun_cooldown = 1.5

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Enemy"]
avoidance_enabled = true

[node name="Area2D" type="Area2D" parent="Enemy"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/Area2D"]
shape = SubResource("CircleShape2D_pd3kx")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_puxup")

[connection signal="velocity_computed" from="Enemy/NavigationAgent2D" to="Enemy" method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="body_entered" from="Enemy/Area2D" to="Enemy" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Enemy/Area2D" to="Enemy" method="_on_area_2d_body_exited"]

[editable path="Enemy"]
